Added code for editing of Images

--- a/fakewallapp/war/index.html
+++ b/fakewallapp/war/index.html
@@ -60,11 +60,19 @@
 	</div>
 
 
-	<div id="comment-dialog" style="display: none;" title="Fake Wall App">
+	<div id="comment_dialog" style="display: none;" title="Fake Wall App">
 
 		<label for="enter_comment">Comment</label>
 		<textarea name="enter_comment" id="enter_comment" class="text ui-widget-content ui-corner-all animated"
 			style="width: 80%" rows="1"></textarea>
+
+	</div>
+	
+	<div id="dp_dialog" style="display: none;" title="Fake Wall App">
+
+		<label for="dp_url">URL</label>
+		<input type="text" name="dp_url" id="dp_url" class="text ui-widget-content ui-corner-all"
+			style="width: 80%"  />
 
 	</div>
 </body>
