--- a/fakewallapp/war/index.html
+++ b/fakewallapp/war/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title></title>
+<title>Fake Wall App</title>
 <script src="resources/jquery-1.7.1.min.js"></script>
-<script src="resources/underscore-min.js"></script>
-<script src="resources/backbone-min.js"></script>
+
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 <script src="resources/jquery.autosize-min.js"></script>
 <script src="resources/commentTemplate.js"></script>
@@ -20,8 +19,15 @@
 
 <body>
 
-	<input type="button" value="show dialog" id="but" />
+<img alt="" src="resources/beta_test.jpg" class="beta">
+	<!-- <input type="button" value="show dialog" id="but" /> -->
+	<div>
+	<p> The rules are simple, Click on any item to change it.
+	</p>
+	</div>
 	<button id="add-comment">Add Comment</button>
+	
+	<p>&nbsp;</p>
 
 	<div class="wrapper">
 		<div class="post_user">
