--- a/fakewallapp/war/index.html
+++ b/fakewallapp/war/index.html
@@ -8,6 +8,9 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 <script src="resources/jquery.autosize-min.js"></script>
 <script src="resources/commentTemplate.js"></script>
+<script src="resources/html2canvas.js"></script>
+<script src="resources/jquery.plugin.html2canvas.js"></script>
+
 <script src="resources/core.js"></script>
 
 
@@ -26,10 +29,12 @@
 	</p>
 	</div>
 	<button id="add-comment">Add Comment</button>
+	<button id="generate_canvas">Go Canvas</button>
+	<button id="post" style="display:none">Post</button>
 	
 	<p>&nbsp;</p>
 
-	<div class="wrapper">
+	<div class="wrapper" id="wrapper">
 		<div class="post_user">
 			<div>
 				<img class="dp" src="resources/dp.jpg" onclick="imageClicked(event)" />
@@ -67,7 +72,7 @@
 		</div>
 	</div>
 
-
+	
 	<div id="comment_dialog" style="display: none;" title="Fake Wall App">
 
 		<label for="enter_comment">Comment</label>
