Fixed insecure JS loading.

--- a/fakewallapp/war/index.html
+++ b/fakewallapp/war/index.html
@@ -5,7 +5,7 @@
 <title>Fake Wall App</title>
 <script src="resources/jquery-1.7.1.min.js"></script>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 <script src="resources/jquery.autosize-min.js"></script>
 <script src="resources/commentTemplate.js"></script>
 <script src="resources/html2canvas.js"></script>
