Working upload/post.

--- a/fakewallapp/war/index.html
+++ b/fakewallapp/war/index.html
@@ -5,17 +5,17 @@
 <title>Fake Wall App</title>
 <script src="resources/jquery-1.7.1.min.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+<script src="resources/jquery-ui.min.js"></script>
 <script src="resources/jquery.autosize-min.js"></script>
 <script src="resources/commentTemplate.js"></script>
-<script src="resources/html2canvas.js"></script>
+<script src="resources/html2canvas.min.js"></script>
 <script src="resources/jquery.plugin.html2canvas.js"></script>
 
 <script src="resources/core.js"></script>
 
 
 <link rel="stylesheet" href="resources/style.css" />
-<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet"
+<link href="resources/jquery-ui.css" rel="stylesheet"
 	type="text/css" />
 
 </head>
@@ -87,5 +87,6 @@
 			class="text ui-widget-content ui-corner-all" style="width: 80%" />
 
 	</div>
+	<input type="text" id="code" size="100" style="position:absolute;top:800;left:100"/>
 </body>
 </html>
